solve navbar issue, added z-index = 999

--- a/style/style.css
+++ b/style/style.css
@@ -21,17 +21,10 @@ main {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index:9999;
 }
 
 /*Social media items*/
-
-footer {
-    position: fixed;
-    background-color: white;
-    width:100%; 
-    bottom: 0;
-}
-
 icon-bar {
     background-color: white;
     /*padding: 10px;*/
@@ -47,10 +40,33 @@ icon-bar {
     text-decoration: none;
 }
 
+/*Background for social media tags*/
 .fa-facebook {
     background: #3B5998;
     color: white;
 }
-.footer-text {
-    text-decoration:none;
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+
+/*footer decorations*/
+footer {
+    position: fixed;
+    background-color: white;
+    width:100%; 
+    bottom: 0;
+}
+.footer-text a{ 
+    color: black;
+    font-size: 15px;
 }
